# chatak

./: .gitignore  README.rst  pyproject.toml  tox.ini
chatak/: chatak.py  utils.py
docs/: conf.py  index.rst
licenses/: LICENSE.rst
